# rcss_cluster

./: Cargo.toml  Dockerfile  LICENSE  README.md  gameserver.yaml
allocator/: Cargo.toml  Dockerfile  fleet.yaml  template.json
allocator/manifests/: deployment.yaml  fleet_template.yaml  pvc.yaml  rbac.yaml  service.yaml
allocator/src/: args.rs  lib.rs  main.rs
allocator/src/controller/: mod.rs  state.rs
allocator/src/controller/fleet/: create.rs  drop.rs  mod.rs
allocator/src/controller/gs/: allocate.rs
allocator/src/declaration/: coach.rs  host_port.rs  image.rs  mod.rs  team.rs
allocator/src/k8s/: allocation.rs  error.rs  fleet.rs  mod.rs
allocator/src/k8s/allocation/: builder.rs  client_impl.rs  crd.rs  mod.rs
allocator/src/k8s/fleet/: builder.rs  client_impl.rs  crd.rs  mod.rs  template.rs
allocator/src/metadata/: annotations.rs  from_v1.rs  labels.rs  mod.rs
allocator/src/metadata/label_serdes/: des_impl.rs  error.rs  mod.rs  ser_impl.rs
allocator/src/schema/v1/: agent.rs  config.rs  mod.rs  player.rs  policy.rs  utils.rs
allocator/templates/: fleet.yaml
client/: Cargo.toml
client/src/: agones.rs  error.rs  main.rs  proxy.rs  room.rs  utils.rs
client/src/controller/: health.rs  mod.rs
client/src/controller/error/: error.rs  mod.rs  proxy.rs  room.rs
client/src/controller/rooms/: create.rs  mod.rs  room.rs
client/src/room/: config.rs  conn.rs  error.rs  mod.rs  room.rs  ws.rs
service/: Cargo.toml
service/src/: error.rs  lib.rs
service/src/addons/: mod.rs  playmode.rs  time.rs
service/src/agones/: agones.rs  args.rs  config.rs  metadata.rs  mod.rs
service/src/agones/match_composer/: args.rs  client.rs  error.rs  mod.rs
service/src/base/: args.rs  base.rs  config.rs  mod.rs  process.rs  status.rs
service/src/metrics/: agones.rs  agones_conf.rs  conf.rs  mod.rs  rcss_conf.rs  status.rs
service/src/standalone/: standalone.rs
sidecars/match_composer/: Cargo.toml  Dockerfile  config.json
sidecars/match_composer/src/: composer.rs  main.rs  player.rs  team.rs
sidecars/match_composer/src/bot/: bot.rs  mod.rs  process.rs  registry.rs
sidecars/match_composer/src/config/: agent.rs  bot.rs  image.rs  mod.rs  player.rs  server.rs
sidecars/match_composer/src/image/: helios_base.rs  image.rs  mod.rs  registry.rs  ssp.rs
sidecars/match_composer/src/info/: team.rs
(+266 files in other folders)
