[package]
name = "allocator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
clap.workspace = true
dashmap.workspace = true

# K8s dependencies
kube = { version = "3", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
agones = "1.56"

serde_yaml = "0.9"

common = { path = "../common", features = ["axum"] }

arcstr.workspace = true
uuid = { version = "1", features = ["v4"] }
